compiler/tests/ar/errors/pure_void.salam
// لغة: العربية
// توقع: E012
نقي دالة لاشيء(قيمة : صحيح):
    ناتج := قيمة
نهاية

دالة الرئيسية:
    لاشيء(1)
نهاية
